src/styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: var(--a-text-action);
  text-decoration: underline;
  display: inline-flex;
  align-items: center;
  gap: var(--a-spacing-1);
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {

  * {
    background: var(--a-gray-900) !important;
    color: var(--a-gray-200);
  }
}

main {
  max-width: 90rem;
  padding: 0 2rem;
  margin: 2rem auto 2rem;
}

.decorator-utils-container {
  margin-bottom: -2.5rem;
}

@media (min-width: 1100px) {
  .decorator-utils-container {
    margin-bottom: -5.9rem;
  }
}

